--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "axios": "^1.7.5",
+    "cookie": "^0.6.0",
+    "react-spinners": "^0.14.1"
+  }
 }
