--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Check Out Repo
         uses: actions/checkout@v2
 
+      - name: Prepare Dockerfile
+        run: cp ./docker/Dockerfile.user ./Dockerfile
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -37,6 +40,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             sudo docker pull akashikur/wallet:latest
-            sudo docker stop web-app || true
-            sudo docker rm web-app || true
-            sudo docker run -d --name web-app -p 3005:3000 akashikur/wallet:latest
+            sudo docker stop wallet || true
+            sudo docker rm wallet || true
+            sudo docker run -d --name wallet -p 3005:3000 akashikur/wallet:latest
